--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules/
 
 /server/config.*
 !/server/config.example.js
-/server/public/
-/server/certs/
+# /server/public/
+# /server/certs/
 !/server/certs/mediasoup-demo.localhost.*
